# IMU

./: IMU.cpp  Kalman Filter Sample Code.cpp
BNO055_Arduino_ROS/IMU_reader/: CMakeLists.txt  package.xml
BNO055_Arduino_ROS/IMU_reader/src/: IMU_reader.cpp
Kalman Filter/: KalmanFilter.cpp  KalmanFilter.h
Kalman Filter_C and ASM/: KalmanFilter.asm  KalmanFilter.c  KalmanFilter.h  Makefile  README.txt  kalmanTest.c  macros.inc
Kalman Filter_C and ASM/Other/: KalmanFilter.asm  kalman filter struct addresses.txt
Kalman Filter_C and ASM/Sample Data/: sampleData.txt  sampleDataVigane.txt
Other Headers/: L3G4200D.cpp  L3G4200D.h  MMA8451Q.cpp  MMA8451Q.h  XmegaTWI.cpp  XmegaTWI.h  avr_compiler.h  twi_master_driver.c
